hql-ph002: Create a Circle
